--- a/css/pc.scss
+++ b/css/pc.scss
@@ -68,6 +68,15 @@
   // 行間を開けて読みやすく
   line-height: 2;
 
+  h2 {
+    margin-top: 4em !important;
+    border-bottom: 1px solid #ccc;
+  }
+
+  h3 {
+    margin-top: 2em !important;
+  }
+
   p {
     // 下方向にだけ margin があると pre, p, pre とならんだ時などに
     // 不自然になるので、上下に margin をつける
